--- a/addressBook/app/views/login_page/index.html.erb
+++ b/addressBook/app/views/login_page/index.html.erb
@@ -1,1 +1,20 @@
-<h1>Login Page</h1>
+<div class="d-flex align-items-center justify-content-center">
+  <h1>Login Page</h1>
+</div>
+
+<div class="d-flex align-items-center justify-content-center">
+  <br/>
+  <form>
+    <div class="mb-3">
+      <label for="inputEmail" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="mb-3">
+      <label for="inputPassword" class="form-label">Password</label>
+      <input type="password" class="form-control" id="inputPassword">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+
