--- a/addressBook/app/views/login_page/index.html.erb
+++ b/addressBook/app/views/login_page/index.html.erb
@@ -13,7 +13,7 @@
       <label for="inputPassword" class="form-label">Password</label>
       <input type="password" class="form-control" id="inputPassword">
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit<%= link_to 'addressBook', 'addressbook' %></button>
   </form>
 </div>
 
