Created people table and created basic crud apis and added JQuery3

--- a/addressBook/app/views/new_contact/index.html.erb
+++ b/addressBook/app/views/new_contact/index.html.erb
@@ -13,7 +13,7 @@
     </select>
     <div class="mb-3">
       <label for="inputFirstName" class="form-label">First Name</label>
-      <input type="text" class="form-control" id="inputFirstName">
+      <input type="text" class="form-control" id="inputFirstName" required>
     </div>
     <div class="mb-3">
       <label for="inputMiddleName" class="form-label">Middle Name</label>
@@ -21,7 +21,7 @@
     </div>
     <div class="mb-3">
       <label for="inputLastName" class="form-label">Last Name</label>
-      <input type="text" class="form-control" id="inputLastName">
+      <input type="text" class="form-control" id="inputLastName" required>
     </div>
     <div class="mb-3">
       <label for="inputSSN" class="form-label">SSN</label>
