Created a basic login and account creation page that uses the user table with Bcrypt

--- a/addressBook/app/views/contacts/index.html.erb
+++ b/addressBook/app/views/contacts/index.html.erb
@@ -5,7 +5,8 @@
 </div>
 <br/>
 <div class="d-flex align-items-center justify-content-center">
-  <%= link_to "New Contact", new_contact_path, :class => "btn btn-primary" %>
+  <%= link_to "New Contact", new_contact_path, :class => "btn btn-primary" %> |
+  <%= link_to "Sign out", new_session_path, method:"delete", :class => "btn btn-primary" %>
 </div>
 <br/>
 
