phone numbers index page only shows the phone numbers associated with the contact it was accessed from.

--- a/addressBook/app/views/contacts/show.html.erb
+++ b/addressBook/app/views/contacts/show.html.erb
@@ -8,8 +8,8 @@
 </div>
 <br>
 <div class="d-flex align-items-center justify-content-center">
-  <%= link_to "Edit this contact", edit_contact_path(@contact), :class => "btn btn-primary" %> |
-  <%= link_to "Back to contacts", contacts_path, :class => "btn btn-primary" %> |
-
-  <%= button_to "Destroy this contact", @contact, method: :delete, :remote => true,  :class => "delete_contact btn btn-primary" %>
+  <%= link_to "Contact Phone Numbers", phone_numbers_path(first_name:@contact.firstName, middle_name:@contact.middleName, last_name:@contact.lastName), :class => "btn btn-primary" %> |
+  <%= link_to "Edit this contact", edit_contact_path(@contact), :class => "btn btn-primary" %>|
+  <%= button_to "Destroy this contact", @contact, method: :delete, :remote => true,  :class => "delete_contact btn btn-primary" %> |
+  <%= link_to "Back to contacts", contacts_path, :class => "btn btn-primary" %>
 </div>
