--- a/addressBook/app/views/phone_numbers/index.html.erb
+++ b/addressBook/app/views/phone_numbers/index.html.erb
@@ -17,7 +17,8 @@
   </div>
   <div class="d-flex align-items-center justify-content-center">
     <p>
-      <%= link_to "Show this phone number", phone_number, :class => "btn btn-primary" %>
+      <%= link_to "Show this phone number", phone_number, :class => "btn btn-primary" %> |
+      <%= link_to "Back to contacts", "/contacts", :class => "btn btn-primary" %>
     </p>
   </div>
   <% end %>
