Added Email and address portion of the web app

--- a/addressBook/app/views/contacts/_form.html.erb
+++ b/addressBook/app/views/contacts/_form.html.erb
@@ -44,7 +44,7 @@
 
     <div class="mb-3">
       <%= form.label :comment, style: "display: block", :class => "form-label" %>
-      <%= form.text_field :comment, :class => "form-control" %>
+      <%= form.text_area :comment, :cols => 3, :class => "form-control" %>
     </div>
 
     <div class="mb-3">
