--- a/addressBook/app/views/phone_numbers/index.html.erb
+++ b/addressBook/app/views/phone_numbers/index.html.erb
@@ -1,12 +1,13 @@
 <p style="color: green"><%= notice %></p>
 
 <div class="d-flex align-items-center justify-content-center">
-<h1>Phone Numbers</h1>
+  <h1>Phone Numbers</h1>
 </div>
 <br>
 
 <div class="d-flex align-items-center justify-content-center">
-  <%= link_to "Add a New Phone Number", new_phone_number_path, :class => "btn btn-primary" %>
+  <%= link_to "Add a New Phone Number", new_phone_number_path, :class => "btn btn-primary" %>|
+  <%= link_to "Back to contacts", contacts_path, :class => "btn btn-primary" %>
 </div>
 <br>
 
@@ -17,8 +18,7 @@
   </div>
   <div class="d-flex align-items-center justify-content-center">
     <p>
-      <%= link_to "Show this phone number", phone_number, :class => "btn btn-primary" %> |
-      <%= link_to "Back to contacts", "/contacts", :class => "btn btn-primary" %>
+      <%= link_to "Show this phone number", phone_number, :class => "btn btn-primary" %>
     </p>
   </div>
   <% end %>
