--- a/addressBook/app/views/emails/_form.html.erb
+++ b/addressBook/app/views/emails/_form.html.erb
@@ -1,11 +1,11 @@
 <div class="d-flex align-items-center justify-content-center">
-  <%= form_with(model: phone_number) do |form| %>
-    <% if phone_number.errors.any? %>
+  <%= form_with(model: email) do |form| %>
+    <% if email.errors.any? %>
       <div style="color: red">
-        <h2><%= pluralize(phone_number.errors.count, "error") %> prohibited this phone_number from being saved:</h2>
+        <h2><%= pluralize(email.errors.count, "error") %> prohibited this email from being saved:</h2>
 
         <ul>
-          <% phone_number.errors.each do |error| %>
+          <% email.errors.each do |error| %>
             <li><%= error.full_message %></li>
           <% end %>
         </ul>
@@ -28,8 +28,8 @@
     </div>
 
     <div class="mb-3">
-      <%= form.label :number, style: "display: block", :class => "form-label" %>
-      <%= form.number_field :number, :class => "form-control" %>
+      <%= form.label :emailAddress, 'Email Address', style: "display: block", :class => "form-label" %>
+      <%= form.text_field :emailAddress, :class => "form-control" %>
     </div>
 
     <div class="mb-3">
@@ -41,5 +41,4 @@
       <%= form.submit :class => "btn btn-primary"%>
     </div>
   <% end %>
-
 </div>
