--- a/addressBook/app/views/phone_numbers/new.html.erb
+++ b/addressBook/app/views/phone_numbers/new.html.erb
@@ -2,10 +2,12 @@
   <h1>New Phone Number</h1>
 </div>
 <br>
+
 <div class="d-flex align-items-center justify-content-center">
-  <%= link_to "Back to phone numbers", phone_numbers_path, :class => "btn btn-primary" %>
+  <%= link_to "Back to phone numbers", phone_numbers_path(first_name: @phone_number.firstName, middle_name: @phone_number.middleName, last_name: @phone_number.lastName), :class => "btn btn-primary" %>
 </div>
 <br>
+
 <div class="d-flex align-items-center justify-content-center">
   <%= render "form", phone_number: @phone_number %>
 </div>
