--- a/addressBook/app/views/addresses/_form.html.erb
+++ b/addressBook/app/views/addresses/_form.html.erb
@@ -14,7 +14,7 @@
 
     <div class="mb-3">
       <%= form.label :firstName, 'First Name', style: "display: block", :class => "form-label"%>
-      <%= form.text_field :firstName, :class => "form-control" %>
+      <%= form.text_field :firstName, :class => "form-control", :required => true %>
     </div>
 
     <div class="mb-3">
@@ -24,22 +24,22 @@
 
     <div class="mb-3">
       <%= form.label :lastName, 'Last Name', style: "display: block", :class => "form-label" %>
-      <%= form.text_field :lastName, :class => "form-control" %>
+      <%= form.text_field :lastName, :class => "form-control", :required => true %>
     </div>
 
     <div class="mb-3">
       <%= form.label :street, style: "display: block", :class => "form-label" %>
-      <%= form.text_field :street, :class => "form-control" %>
+      <%= form.text_field :street, :class => "form-control", :required => true %>
     </div>
 
     <div class="mb-3">
       <%= form.label :town, style: "display: block", :class => "form-label" %>
-      <%= form.text_field :town, :class => "form-control" %>
+      <%= form.text_field :town, :class => "form-control", :required => true %>
     </div>
 
     <div class="mb-3">
       <%= form.label :zipCode, "Zip Code", style: "display: block", :class => "form-label" %>
-      <%= form.number_field :zipCode, :class => "form-control" %>
+      <%= form.number_field :zipCode, :class => "form-control", :required => true %>
     </div>
 
     <div class="mb-3">
