--- a/addressBook/app/views/phone_numbers/_form.html.erb
+++ b/addressBook/app/views/phone_numbers/_form.html.erb
@@ -14,7 +14,7 @@
 
     <div class="mb-3">
       <%= form.label :firstName, 'First Name', style: "display: block", :class => "form-label"%>
-      <%= form.text_field :firstName, :class => "form-control" %>
+      <%= form.text_field :firstName, :class => "form-control", :required => true %>
     </div>
 
     <div class="mb-3">
@@ -24,12 +24,12 @@
 
     <div class="mb-3">
       <%= form.label :lastName, 'Last Name', style: "display: block", :class => "form-label" %>
-      <%= form.text_field :lastName, :class => "form-control" %>
+      <%= form.text_field :lastName, :class => "form-control", :required => true %>
     </div>
 
     <div class="mb-3">
       <%= form.label :number, style: "display: block", :class => "form-label" %>
-      <%= form.number_field :number, :class => "form-control" %>
+      <%= form.number_field :number, :class => "form-control", :required => true %>
     </div>
 
     <div class="mb-3">
