Made fields required in the forms

--- a/addressBook/app/views/addresses/new.html.erb
+++ b/addressBook/app/views/addresses/new.html.erb
@@ -4,7 +4,7 @@
 <br>
 
 <div class="d-flex align-items-center justify-content-center">
-  <%= link_to "Back to addresses", addresses_path(first_name: @address.firstName, middle_name: @address.middleName, last_name: @address.lastName), :class => "btn btn-primary" %>
+  <%= link_to "Back to contacts", contacts_path, :class => "btn btn-primary" %>
 </div>
 <br>
 
