--- a/addressBook/app/views/phone_numbers/new.html.erb
+++ b/addressBook/app/views/phone_numbers/new.html.erb
@@ -4,7 +4,7 @@
 <br>
 
 <div class="d-flex align-items-center justify-content-center">
-  <%= link_to "Back to phone numbers", phone_numbers_path(first_name: @phone_number.firstName, middle_name: @phone_number.middleName, last_name: @phone_number.lastName), :class => "btn btn-primary" %>
+  <%= link_to "Back to contacts", contacts_path, :class => "btn btn-primary" %>
 </div>
 <br>
 
