--- a/addressBook/app/views/emails/new.html.erb
+++ b/addressBook/app/views/emails/new.html.erb
@@ -4,7 +4,7 @@
 <br>
 
 <div class="d-flex align-items-center justify-content-center">
-  <%= link_to "Back to emails", emails_path(first_name: @email.firstName, middle_name: @email.middleName, last_name: @email.lastName), :class => "btn btn-primary" %>
+  <%= link_to "Back to contacts", contacts_path, :class => "btn btn-primary" %>
 </div>
 <br>
 
