Added Ajax functions

--- a/addressBook/app/views/addresses/_address.html.erb
+++ b/addressBook/app/views/addresses/_address.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id address %>">
+<div id="<%= dom_id address, :class => "address-"+ address.id.to_s %>">
   <p>
     <strong>Firstname:</strong>
     <%= address.firstName %>
