--- a/addressBook/app/views/contacts/_contact.html.erb
+++ b/addressBook/app/views/contacts/_contact.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id contact , :class => "d-flex align-items-center justify-content-center" %> ">
+<div id="<%= dom_id contact , :class => "d-flex align-items-center justify-content-center contact-"+ contact.id.to_s %> ">
 
   <p>
     <strong>Salutation:</strong>
