--- a/addressBook/app/views/addresses/_form.html.erb
+++ b/addressBook/app/views/addresses/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center justify-content-center">
-  <%= form_with(model: address) do |form| %>
+  <%= form_with model: [address], id:"addresses-form" do |form| %>
     <% if address.errors.any? %>
       <div style="color: red">
         <h2><%= pluralize(address.errors.count, "error") %> prohibited this address from being saved:</h2>
